# ProgrammingSeminars806

./: 18.10.24 + 01.11.24.sql  CMakeLists.txt  DB.Client.sln  RGU.DistibutedSystems.sln  RGU.WebProgramming.sln  code.sql  init.sql  main.c
DB.Client.Backend.DBInteraction/: DB.Client.Backend.DBInteraction.csproj  ServiceRegistrator.cs
DB.Client.Backend.Entrypoint.Grpc/: DB.Client.Backend.Entrypoint.Grpc.csproj  EndpointsConfigurator.cs
DB.Client.Backend.Grpc/: ApplicationConfigurator.cs  DB.Client.Backend.Grpc.csproj  ServiceRegistrator.cs  WebHostConfigurator.cs
DB.Client.Backend.Host/: DB.Client.Backend.Host.csproj  Program.cs  appsettings.json
DB.Client.Backend.Host.Core/: DB.Client.Backend.Host.Core.csproj  IApplicationConfigurator.cs  IStartup.cs  IWebHostConfigurator.cs  ServiceRegistratorsCompositionRoot.cs
DB.Client.Domain.Converters/: ConverterExtensions.cs  DB.Client.Domain.Converters.csproj
DB.Client.Domain.Infrastructure/: DB.Client.Domain.Infrastructure.csproj  IRepositoryT.cs
DB.Client.Launcher.App/: App.xaml.cs  DB.Client.Launcher.App.csproj
DB.Client.Launcher.Protoc.Engine/: DB.Client.Launcher.Protoc.Engine.csproj  GrpcChannelFactory.cs
Protos/: product.proto  product_service.proto
RGU.DB.Interaction.Launcher.App/: RGU.DB.Interaction.Launcher.App.sln
RGU.DistibutedSystems.Launcher.App/: App.xaml  App.xaml.cs  RGU.DistibutedSystems.Launcher.App.csproj
RGU.DistributedSystems.UI/: RGU.DistributedSystems.UI.csproj
RGU.WebProgramming.Server.REST.API/: ApplicationConfigurator.cs  RGU.WebProgramming.Server.REST.API.csproj  (+2 more)
src/: array.c  (+8 more)
(+109 files in other folders)
